Fix nav menu on small devices, add interactivity

--- a/estilo.css
+++ b/estilo.css
@@ -18,7 +18,6 @@ Para reusarla en cualquier lugar, solo llaman a la variable: ej: color: var(--bl
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-
 }
 
 h1 {
@@ -31,6 +30,9 @@ h1 {
 
 
 .menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     background: var(--background-color);
     height: 100px;
     width: 100%;
@@ -38,9 +40,18 @@ h1 {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
+.menu .icono {
+    justify-self: left;
+}
+
+.menu .mobile-menu {
+    display: none;
+    justify-self: right;
+}
 
 nav ul {
     float: right;
+    margin-right: 3%;
 }
 
 nav ul .lista {
@@ -57,6 +68,10 @@ nav ul .lista .enlace {
     text-transform: uppercase;
     text-decoration: none;
     letter-spacing: 3px;
+}
+
+.overlay-menu {
+    display: none;
 }
 
 .lista .enlace.active,
@@ -98,6 +113,10 @@ nav ul .lista .enlace {
     height: 83px;
     padding: 2px;
     margin: 8px 5%;
+}
+
+.overlay-menu {
+    display: none;
 }
 
 
@@ -502,7 +521,59 @@ footer {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+/* TABLET SIZE */
+@media screen and (max-width: 1023px){
+    /* Nav bar */
+    .menu {
+        justify-content: space-between;
+    }
 
+    .menu .mobile-menu{
+        display: block;
+        margin: 8px 5%;
+        font-size: 3vh;
+        cursor: pointer;
+    }
+
+    nav ul {
+        display: none;
+    }
+
+    .overlay-menu {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100vw;
+        height: 90vh;
+        background-color: var(--background-color);
+    }
+
+    .show-overlay {
+        display: flex;
+    }
+
+    .overlay-menu ul {
+        list-style: none;
+        text-align: center;
+    }
+
+    .overlay-menu ul li {
+        margin-bottom: 50px;
+    }
+
+    .overlay-menu ul .lista .enlace {
+        color: #08050c;
+        font-size: 20px;
+        height: auto;
+        border-radius: 3px;
+        text-transform: uppercase;
+        text-decoration: none;
+        letter-spacing: 3px;
+    }
+
+}
+
+/* MOBILE SIZE */
 @media only screen and (max-width:768px){
     .contenedor{
         flex-direction: column;
